--- a/VideoANDImageRecording/Info.plist
+++ b/VideoANDImageRecording/Info.plist
@@ -18,8 +18,20 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>To recognize your face and features in this application</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To recognize your face and features in this application</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>To record voice while recording video</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>To recognize your face and features in this application</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To recognize your face and features in this application</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -31,8 +43,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
